packages/react/src/PageLayout/PageLayout.module.css
/* ... */
.HeaderContent {
  /* stylelint-disable-next-line primer/spacing */
  padding: var(--spacing);
}

.HeaderHorizontalDivider {
  /* stylelint-disable-next-line primer/spacing */
  margin-top: var(--spacing);
}

.ContentWrapper {
  display: flex;
  width: 100%;

  /* Hack to prevent overflowing content from pushing the pane region to the next line */
  min-width: 1px;
  flex-direction: column;
  order: var(--region-order-content);

  /* Set flex-basis to 0% to allow flex-grow to control the width of the content region.
      Without this, the content region could wrap onto a different line
      than the pane region on wide viewports if its contents are too wide. */
  flex-basis: 0;
  flex-grow: 1;
  flex-shrink: 1;

  &:where([data-is-hidden='true']) {
    display: none;
  }

  /* Narrow viewport */
  @media (--viewportRange-narrow) {
    &:where([data-is-hidden-narrow='true']) {
      display: none;
    }
  }

  /* Regular viewport */
  @media (--viewportRange-regular) {
    &:where([data-is-hidden-regular='true']) {
      display: none;
    }
  }

  /* Wide viewport */
  @media (--viewportRange-wide) {
    &:where([data-is-hidden-wide='true']) {
      display: none;
    }
  }
}

.Content {
  width: 100%;

  /* stylelint-disable-next-line primer/spacing */
  padding: var(--spacing);
  margin-right: auto;
  margin-left: auto;
  flex-grow: 1;

  &:where([data-width='medium']) {
    max-width: 768px;
  }

  &:where([data-width='large']) {
    max-width: 1012px;
  }

  &:where([data-width='full']) {
    max-width: 100%;
  }

  &:where([data-width='xlarge']) {
    max-width: 1280px;
  }
}

.PaneWrapper {
  display: flex;
  width: 100%;
  margin-right: 0;
  margin-left: 0;

  &:where([data-is-hidden='true']) {
    display: none;
  }

  /* Narrow viewport */
  @media (--viewportRange-narrow) {
    &:where([data-is-hidden-narrow='true']) {
      display: none;
    }

    &:where([data-position-narrow='end']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-top: var(--spacing-row);
      flex-direction: column;
      order: var(--region-order-pane-end);
    }

    &:where([data-position-narrow='start']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-bottom: var(--spacing-row);
      flex-direction: column-reverse;
      order: var(--region-order-pane-start);
    }
  }

  /* Base position (non-responsive) - applies at narrow viewports only */
  @media (--viewportRange-narrow) {
    &:where([data-position='end']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-top: var(--spacing-row);
      flex-direction: column;
      order: var(--region-order-pane-end);
    }

    &:where([data-position='start']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-bottom: var(--spacing-row);
      flex-direction: column-reverse;
      order: var(--region-order-pane-start);
    }
  }

  @media screen and (min-width: 768px) {
    &:where([data-is-hidden-regular='true']) {
      display: none;
    }

    width: auto;
    margin-top: 0 !important;
    margin-bottom: 0 !important;

    &:where([data-sticky]) {
      position: sticky;
      /* stylelint-disable-next-line primer/spacing */
      top: var(--offset-header);
      max-height: 100vh;
    }

    /* Base position (non-responsive) - applies at regular+ viewports */
    &:where([data-position='end']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-left: var(--spacing-column);
      flex-direction: row-reverse;
      order: var(--region-order-pane-end);
    }

    &:where([data-position='start']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-right: var(--spacing-column);
      flex-direction: row;
      order: var(--region-order-pane-start);
    }

    &:where([data-position-regular='end']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-left: var(--spacing-column);
      flex-direction: row-reverse;
      order: var(--region-order-pane-end);
    }

    &:where([data-position-regular='start']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-right: var(--spacing-column);
      flex-direction: row;
      order: var(--region-order-pane-start);
    }
  }

  @media (--viewportRange-wide) {
    &:where([data-is-hidden-wide='true']) {
      display: none;
    }

    &:where([data-position-wide='end']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-left: var(--spacing-column);
      flex-direction: row-reverse;
      order: var(--region-order-pane-end);
    }

    &:where([data-position-wide='start']) {
      /* stylelint-disable-next-line primer/spacing */
      margin-right: var(--spacing-column);
      flex-direction: row;
      order: var(--region-order-pane-start);
    }
  }
}
/* ... */

